--- a/base-blog-em/package.json
+++ b/base-blog-em/package.json
@@ -9,12 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-overlay": "6.0.9",
-    "react-query": "^3.13.5",
+    "react-query": "^3.39.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
